samples/_failures_safe/1761269443_c9c9b2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de248b01.c: In function ‘main’:
./samples/SAFE/__tmp_de248b01.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
